<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#c0c0c0"/>

    <EditText
        android:id="@+id/num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enten_your_number"

        android:inputType="number" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/call"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#c0c0c0"/>



    <EditText
        android:id="@+id/smsnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/smstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_message"
        android:inputType="text" />

    <Button
        android:id="@+id/smsbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_msg"
        android:textColor="@color/black"/>


</LinearLayout>